--- a/ProjectSemester/Views/Home/Index.cshtml
+++ b/ProjectSemester/Views/Home/Index.cshtml
@@ -26,6 +26,7 @@
                 <td>@weapon.calibr</td>
                 <td>@weapon.description</td>
                 <td>@weapon.price</td>
+                <td><a href="~/Home/Buy/@weapon.id">Купить</a></td>
             </tr>
         }
     </table>
