--- a/ProjectSemester/Views/Home/Index.cshtml
+++ b/ProjectSemester/Views/Home/Index.cshtml
@@ -1,34 +1,190 @@
 ﻿@model IEnumerable<ProjectSemester.Models.WeaponModel>
 @{
-    ViewData["Title"] = "Home Page";
-    Layout = null;
+    ViewData["Title"] = "Каталог товаров";
 }
 
-<!DOCTYPE html>
+@section Header {
+    <section class="headers">
+        <div class="top-wrapper">
+            <div class="top-header">
+                <div class="top-header__nav">
+                    <ul>
+                        <li><a href="#">Главная</a></li>
+                        <li>
+                            <a href="#" class="catalog">Каталог</a>
+                            <!-- <div class="wrapper-menu">
+                            <div class="menu">
+                                <div class="menu__category">
+                                    <ul>
+                                        <li class="main"><a href="#">Оружие</a></li>
+                                        <li><a href="#">Нарезное</a></li>
+                                        <li><a href="#">Гладкоствольное</a></li>
+                                        <li><a href="#">Комиссионное</a></li>
+                                        <li><a href="#">Пневматическое</a></li>
+                                        <li><a href="#">Ограниченного поражения</a></li>
+                                        <li><a href="#">Арбалеты</a></li>
+                                    </ul>
+                                </div>
+                                <div class="menu__category">
+                                    <ul>
+                                        <li class="main"><a href="#">Патроны</a></li>
+                                        <li><a href="#">Нарезные патроны</a></li>
+                                        <li><a href="#">Гладкоствольные патроны</a></li>
+                                        <li><a href="#">Для пневматики</a></li>
+                                        <li><a href="#">Травматические</a></li>
+                                        <li><a href="#">Фальшпатроны</a></li>
+                                        <li><a href="#">Лазерные патроны</a></li>
+                                    </ul>
+                                </div>
+                                <div class="menu__category">
+                                    <ul>
+                                        <li class="main"><a href="#">Оптика</a></li>
+                                        <li><a href="#">Прицелы дневные</a></li>
+                                        <li><a href="#">Тепловизионные прицелы</a></li>
+                                        <li><a href="#">Прицелы ночного видения</a></li>
+                                        <li><a href="#">Коллиматоры</a></li>
+                                        <li><a href="#">Аксессуары для оптики</a></li>
+                                        <li><a href="#">Бинокли</a></li>
+                                    </ul>
+                                </div>
+                                <div class="menu__category">
+                                    <ul>
+                                        <li class="main"><a href="#">Аксессуары для оружия</a></li>
+                                        <li><a href="#">Кейсы</a></li>
+                                        <li><a href="#">Чехлы</a></li>
+                                        <li><a href="#">Кобуры</a></li>
+                                        <li><a href="#">Магазины</a></li>
+                                        <li><a href="#">Тюнинг</a></li>
+                                        <li><a href="#">Патронажи и кейсы</a></li>
+                                    </ul>
+                                </div>
+                                <div class="menu__category">
+                                    <ul>
+                                        <li class="main"><a href="#">Рыбалка</a></li>
+                                        <li><a href="#">Удилища</a></li>
+                                        <li><a href="#">Катушки</a></li>
+                                        <li><a href="#">Платформы, кресла, обвесы</a></li>
+                                        <li><a href="#">Подсадчеки, садки</a></li>
+                                        <li><a href="#">Кейсы, ящики, хранение</a></li>
+                                        <li><a href="#">Эхолоты и подводные камеры</a></li>
+                                    </ul>
+                                </div>
+                                <div class="menu__category">
+                                    <ul>
+                                        <li class="main"><a href="#">Туризм</a></li>
+                                        <li> <a href="#">Термосы</a></li>
+                                        <li><a href="#">>Рюкзаки, сумки</a></li>
+                                        <li><a href="#">Лопаты, топоры</a></li>
+                                        <li><a href="#">Палатки, тены</a></li>
+                                        <li><a href="#">Спальные мешки</a></li>
+                                        <li><a href="#">Мебель туристическая</a></li>
+                                    </ul>
+                                </div>
+                                <div class="menu__category">
+                                    <ul>
+                                        <li class="main"><a href="#">Одежда</a></li>
+                                        <li><a href="#">Головные уборы</a></li>
+                                        <li><a href="#">Куртки</a></li>
+                                        <li><a href="#">Брюки</a></li>
+                                        <li><a href="#">Костюмы</a></li>
+                                        <li><a href="#">Термобелье</a></li>
+                                        <li><a href="#">Носки</a></li>
+                                    </ul>
+                                </div>
+                                <div class="menu__category">
+                                    <ul>
+                                        <li class="main"><a href="#">Обувь</a></li>
+                                        <li><a href="#">Ножи</a></li>
+                                        <li><a href="#">Часы</a></li>
+                                        <li><a href="#">Сейфы для оружия</a></li>
+                                        <li><a href="#">Кронштейны</a></li>
+                                        <li><a href="#">Уход за оружием</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div> -->
+                        </li>
+                        <li><a href="#">Доставка и оплата</a></li>
+                        <li><a href="#">Услуги</a></li>
+                        <li><a href="#">О магазине</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="top-header__contacts">
+                    <div class="phone">8 (343) 243-55-85</div>
+                    <div class="adress">Улица Героев 3</div>
+                </div>
+            </div>
+        </div>
+        <div class="bottom-wrapper">
+            <div class="bottom-header">
+                <div class="wrapper">
+                    <div class="logo">
+                        BIZON
+                    </div>
+                    <div class="buttons">
+                        <button>Заказать звонок</button>
+                        <button>Мастерские</button>
+                        <button>3D-тур</button>
+                    </div>
+                    <div class="search">
+                        <input type="text" name="" id="" placeholder="ПОИСК">
+                        <button>Найти</button>
+                        <button>
+                            Корзина
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+}
 
-<html>
-<head>
-    <title>Магазин смартфонов</title>
-</head>
-<body>
-    <h3>Смартфоны</h3>
-    <table>
-        <tr>
-            <td>Модель</td>
-            <td>Производитель</td>
-            <td>Цена</td>
-            <td></td>
-        </tr>
+
+
+<section class="filters">
+    <div class="wrapper">
+        <div class="filter">
+            <h1>Цена</h1>
+            <div> По возрастанию<input type="checkbox"></div>
+            <div> По убыванию<input type="checkbox"></div>
+        </div>
+        <div class="filter">
+            <h1>Тип</h1>
+            <div>Нарезное<input type="checkbox"></div>
+            <div>Гладкоствольное<input type="checkbox"></div>
+        </div>
+        <div class="filter">
+            <h1>Производство</h1>
+            <div>Иностранное<input type="checkbox"></div>
+            <div>Отечественное<input type="checkbox"></div>
+        </div>
+    </div>
+</section>
+
+<section class="items">
+    <div class="wrapper">
         @foreach (var weapon in Model)
         {
-            <tr>
-                <td>@weapon.name</td>
-                <td>@weapon.calibr</td>
-                <td>@weapon.description</td>
-                <td>@weapon.price</td>
-                <td><a href="~/Home/Buy/@weapon.id">Купить</a></td>
-            </tr>
+            <div class="item">
+                <img src=@weapon.image alt="">
+                <div class="descr">@weapon.name</div>
+                <div class="cost">@weapon.price</div>
+                <button><a href="~/Home/Buy/@weapon.id">Купить</a></button>
+            </div>
         }
-    </table>
-</body>
-</html>
+    </div>
+</section>
+
+
+
+@section Footer
+{
+    <footer>
+        <div class="wrapper">
+            <h1>BIZON</h1>
+            <div class="phone">8 (343) 243-55-85</div>
+            <div class="adress">Улица Героев 3</div>
+        </div>
+    </footer>
+}
