--- a/ProjectSemester/Views/Home/Buy.cshtml
+++ b/ProjectSemester/Views/Home/Buy.cshtml
@@ -1,13 +1,8 @@
 ﻿@{
-    Layout = null;
+    ViewData["Title"] = "Оформление заказа";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Оформление заказа</title>
-</head>
-<body>
+
     <div>
         <h3>Форма оформления покупки</h3>
         <p>Для оформления покупки заполните следующие поля:</p>
@@ -30,5 +25,3 @@
             </table>
         </form>
     </div>
-</body>
-</html>
